# ProjectPCA

./: CMakeLists.txt  README.md
Cellule/: CMakeLists.txt  cellule.c  cellule.h  testCellule.c
Liste/: CMakeLists.txt  mainNode.c  node.c  node.h
Pile/: CMakeLists.txt  mainPile.c  pile.c  pile.h
